[Refactor] Api General APi response, business logic layer controller -> services implement